Criado Tela de Contato

--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
                 <li><a href="home.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="#">Horário de Atendimento</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
