--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="home.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="#">Horário de Atendimento</a></li>
+                <li><a href="horario.html">Horário de Atendimento</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -63,7 +63,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p>Telefone: (11) 5929-4583</p>
-            <p>Email: contato@clinicamedica.com</p>
+            <p>Email: contato@clinicahealthplus.com</p>
         </div>
     </footer>
 </body>
