--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="home.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="#">Horário de Atendimento</a></li>
+                <li><a href="horario.html">Horário de Atendimento</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
